# filesync-cpp

./: .gitignore  CMakeLists.txt  README.md
cmake/: Findcommon.cmake  Findopenssl.cmake
core/: CMakeLists.txt  ChangeCommitter.cpp  cfg.cpp  cmd.cpp  db_manager.cpp  file.cpp  filesync.cpp  internal.cpp  server.cpp  server2.cpp
core/cmake/: filesync-coreConfig.cmake.in
core/cmd/: LoginCMD.cpp  SyncCMD.cpp
core/include/: cfg.h  change_committer.h  cmd.h  db_manager.h  file_browser_service.h  file_repository.h  filesync.h  internal.h  logger.h  server.h  webapi.h
core/include/filesync/: cfg.h  change_committer.h  cmd.h  db_manager.h  file.h  file_repository.h  filesync.h  server.h  sqlite3.h  webapi.h
filesync/: CMakeLists.txt  ChangeCommitter.cpp  cfg.cpp  db_manager.cpp  filesync.cpp  http.cpp  internal.cpp  monitor.cpp  server.cpp  tcp.cpp
filesync/include/: cfg.h  change_committer.h  db_manager.h  filesync.h  http.h  internal.h  monitor.h  server.h  tcp.h
filesync/lib/: sqlite3.lib
scripts/: run-as-server.sh
sqlite/: CMakeLists.txt
test/: CMakeLists.txt  file_repository_test.cpp  test.cpp
